--- a/lib/ticketing_system_web/live/ticket_live/index.html.heex
+++ b/lib/ticketing_system_web/live/ticket_live/index.html.heex
@@ -8,6 +8,7 @@
       title={@page_title}
       action={@live_action}
       ticket={@ticket}
+      user = {@user}
       return_to={Routes.ticket_index_path(@socket, :index)}
     />
   </.modal>
