--- a/lib/ticketing_system_web/live/event_live/show.html.heex
+++ b/lib/ticketing_system_web/live/event_live/show.html.heex
@@ -21,7 +21,7 @@
       action={@live_action}
       changeset = {@ticket_changeset}
       event = {@event}
-      
+      ticket_message =""
        return_to={Routes.event_show_path(@socket, :show, @event)}
     />
   </.modal>
