--- a/lib/ticketing_system_web/templates/layout/root.html.heex
+++ b/lib/ticketing_system_web/templates/layout/root.html.heex
@@ -27,5 +27,9 @@
       </section>
     </header>
     <%= @inner_content %>
+     <script src="
+https://cdn.jsdelivr.net/npm/qrcode-svg@1.1.0/dist/qrcode.min.js
+">
+  </script>
   </body>
 </html>
